[package]
name = "hl7-mllp-codec"
description = "A Tokio codec for HL7 Minimal Lower Layer Message Transport protocol (MLLP)"
version = "0.0.7"
authors = ["wokket <wokket@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/wokket/hl7-mllp-codec"
documentation = "https://docs.rs/hl7-mllp-codec"
categories = ["asynchronous", "network-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies]
bytes = "1.0.1"
tokio-util = {version="0.6", features=["codec"]}
log = "0.4.14"


[dev-dependencies]
criterion = "0.3.4"
futures = "0.3.13"
tokio = {version="1.2.0", features=["full"]}

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"